--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cómo calcular precios con descuentos</title>
+    <title>Discount Calculator</title>
 </head>
 <body>
-    <h1>Cómo calcular precios con descuentos</h1>   
+    <h1>Calculate prices with discount</h1>   
 
-   <label for="price">Precio Original de tu producto:</label>
+   <label for="price">Original price of your product:</label>
    <input id="price" type="number" />
-   <label for="discount">Descuento de tu producto:</label>
+   <label for="discount">Discount porcentage:</label>
    <input id="discount" type="number" />
-   <button id="calcular">Calcular descuento</button>
+   <button id="calcular">Calculate new price</button>
 
 <p id="result"></p>
 
